Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/Farmister_Orders__c.object-meta.xml
<CustomObject>
    <label>Farmister_Order</label>
    <nameField>
        <displayFormat>FARMISTAR-{0000}</displayFormat>
        <label>Farmister_Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farmister_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>