Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/fields/Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type__c</fullName>
    <label>Crop Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>