Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Farmer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>