Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/fields/Q_A_order__c.field-meta.xml
<CustomField>
    <fullName>Q_A_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q/A order</label>
    <type>Checkbox</type>
</CustomField>