Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>