Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Will Contact You today</fullName>
            </value>
            <value>
                <fullName>In Touch With the Customer</fullName>
            </value>
            <value>
                <fullName>Visit Scheduled</fullName>
            </value>
            <value>
                <fullName>Q/A Process completed</fullName>
            </value>
            <value>
                <fullName>Crop Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>