Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>