Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/listViews/Order.listView-meta.xml
<ListView>
    <fullName>Order</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Q_A_order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Order</label>
</ListView>