Farmistar Salesforce Code/force-app/main/default/objects/Farmister_Orders__c/listViews/Q_A.listView-meta.xml
<ListView>
    <fullName>Q_A</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Q_A_order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Q/A</label>
</ListView>